--- a/nimFinLib.html
+++ b/nimFinLib.html
@@ -1682,7 +1682,7 @@ head means oldest rows
 </dd>
 <dt id="getCurrentForex"><a name="getCurrentForex,seq[string]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getCurrentForex</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">curs</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Cf</span></pre></dt>
 <dd>
-getcurrentForex2 get the latest yahoo exchange rate info for a currency pair e.g EURUSD , JPYUSD ,GBPHKD
+getCurrentForex get the latest yahoo exchange rate info for a currency pair e.g EURUSD , JPYUSD ,GBPHKD
 
 </dd>
 <dt id="showCurrentForex"><a name="showCurrentForex,seq[string]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showCurrentForex</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">curs</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span><span class="Other">)</span> <span class="Other">{.</span><span class="Identifier">discardable</span><span class="Other">.}</span></pre></dt>
@@ -1744,7 +1744,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-06-18 16:18:50 UTC</small>
+        <small>Made with Nim. Generated: 2015-06-18 16:25:06 UTC</small>
       </div>
     </div>
   </div>
