--- a/nimFinLib.html
+++ b/nimFinLib.html
@@ -1233,12 +1233,18 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="rc*(self: var Df): seq[RunningStat]"><wbr />rc</a></li>
   <li><a class="reference" href="#rca,Df"
     title="rca*(self: var Df): seq[RunningStat]"><wbr />rca</a></li>
-  <li><a class="reference" href="#initPf,PF"
-    title="initPf*(apf: var PF): PF"><wbr />init<wbr />Pf</a></li>
-  <li><a class="reference" href="#initNf,Nf"
-    title="initNf*(anf: var Nf): Nf"><wbr />init<wbr />Nf</a></li>
-  <li><a class="reference" href="#initDf,Df"
-    title="initDf*(adf: var Df): Df"><wbr />init<wbr />Df</a></li>
+  <li><a class="reference" href="#initPf,"
+    title="initPf*(): PF"><wbr />init<wbr />Pf</a></li>
+  <li><a class="reference" href="#initNf,"
+    title="initNf*(): Nf"><wbr />init<wbr />Nf</a></li>
+  <li><a class="reference" href="#initDf,"
+    title="initDf*(): Df"><wbr />init<wbr />Df</a></li>
+  <li><a class="reference" href="#initTs,"
+    title="initTs*(): Ts"><wbr />init<wbr />Ts</a></li>
+  <li><a class="reference" href="#initCf,"
+    title="initCf*(): Cf"><wbr />init<wbr />Cf</a></li>
+  <li><a class="reference" href="#initPool,"
+    title="initPool*(): seq[Df]"><wbr />init<wbr />Pool</a></li>
   <li><a class="reference" href="#getTerminalWidth,"
     title="getTerminalWidth*(): int"><wbr />get<wbr />Terminal<wbr />Width</a></li>
   <li><a class="reference" href="#showCurrentIndexes,string"
@@ -1496,19 +1502,34 @@ Various convenience procs to access the data and some calcs like returns etc sto
 
 
 </dd>
-<dt id="initPf"><a name="initPf,PF"></a><pre><span class="Keyword">proc</span> <span class="Identifier">initPf</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">apf</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">PF</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">PF</span></pre></dt>
+<dt id="initPf"><a name="initPf,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">initPf</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">PF</span></pre></dt>
 <dd>
 init a new empty account object
 
 </dd>
-<dt id="initNf"><a name="initNf,Nf"></a><pre><span class="Keyword">proc</span> <span class="Identifier">initNf</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">anf</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">Nf</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Nf</span></pre></dt>
+<dt id="initNf"><a name="initNf,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">initNf</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Nf</span></pre></dt>
 <dd>
 init a new empty portfolio object
 
 </dd>
-<dt id="initDf"><a name="initDf,Df"></a><pre><span class="Keyword">proc</span> <span class="Identifier">initDf</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">adf</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">Df</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Df</span></pre></dt>
+<dt id="initDf"><a name="initDf,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">initDf</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Df</span></pre></dt>
 <dd>
 init stock data object 
+
+</dd>
+<dt id="initTs"><a name="initTs,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">initTs</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Ts</span></pre></dt>
+<dd>
+init a timeseries object
+
+</dd>
+<dt id="initCf"><a name="initCf,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">initCf</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Cf</span></pre></dt>
+<dd>
+init a Cf object to hold basic forex data
+
+</dd>
+<dt id="initPool"><a name="initPool,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">initPool</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Df</span><span class="Other">]</span></pre></dt>
+<dd>
+init pools , which are sequences of Df objects used in portfolio building
 
 </dd>
 <dt id="getTerminalWidth"><a name="getTerminalWidth,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getTerminalWidth</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span></pre></dt>
@@ -1544,7 +1565,7 @@ init stock data object
 </dd>
 <dt id="month"><a name="month,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">month</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">aDate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
 <dd>
-<p>month starts with 00 for jan</p>
+<p>yahoo month starts with 00 for jan</p>
 <p>Format MM</p>
 
 
@@ -1762,7 +1783,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-06-18 17:22:16 UTC</small>
+        <small>Made with Nim. Generated: 2015-06-19 10:15:39 UTC</small>
       </div>
     </div>
   </div>
