--- a/nimFinLib.html
+++ b/nimFinLib.html
@@ -1239,14 +1239,16 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="initNf*(): Nf"><wbr />init<wbr />Nf</a></li>
   <li><a class="reference" href="#initDf,"
     title="initDf*(): Df"><wbr />init<wbr />Df</a></li>
-  <li><a class="reference" href="#initTs,"
-    title="initTs*(): Ts"><wbr />init<wbr />Ts</a></li>
   <li><a class="reference" href="#initCf,"
     title="initCf*(): Cf"><wbr />init<wbr />Cf</a></li>
+  <li><a class="reference" href="#initTs,"
+    title="initTs*(): Ts"><wbr />init<wbr />Ts</a></li>
   <li><a class="reference" href="#initPool,"
     title="initPool*(): seq[Df]"><wbr />init<wbr />Pool</a></li>
   <li><a class="reference" href="#getTerminalWidth,"
     title="getTerminalWidth*(): int"><wbr />get<wbr />Terminal<wbr />Width</a></li>
+  <li><a class="reference" href="#decho,int"
+    title="decho*(z: int)"><wbr />decho</a></li>
   <li><a class="reference" href="#showCurrentIndexes,string"
     title="showCurrentIndexes*(idxs: string)"><wbr />show<wbr />Current<wbr />Indexes</a></li>
   <li><a class="reference" href="#showCurrentStocks,string"
@@ -1257,6 +1259,10 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="month*(aDate: string): string"><wbr />month</a></li>
   <li><a class="reference" href="#year,string"
     title="year*(aDate: string): string"><wbr />year</a></li>
+  <li><a class="reference" href="#validdate,string"
+    title="validdate*(adate: string): bool"><wbr />validdate</a></li>
+  <li><a class="reference" href="#compareDates,string,string"
+    title="compareDates*(startDate, endDate: string): int"><wbr />compare<wbr />Dates</a></li>
   <li><a class="reference" href="#intervalsecs,string,string"
     title="intervalsecs*(startDate, endDate: string): float"><wbr />intervalsecs</a></li>
   <li><a class="reference" href="#intervalmins,string,string"
@@ -1273,6 +1279,10 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="intervalyears*(startDate, endDate: string): float"><wbr />intervalyears</a></li>
   <li><a class="reference" href="#getSymbol2,string,string,string"
     title="getSymbol2*(symb, startDate, endDate: string): Df"><wbr />get<wbr />Symbol2</a></li>
+  <li><a class="reference" href="#showhistData,Df,int"
+    title="showhistData*(adf: Df; n: int)"><wbr />showhist<wbr />Data</a></li>
+  <li><a class="reference" href="#showhistData,Df,string,string"
+    title="showhistData*(adf: Df; s: string; e: string)"><wbr />showhist<wbr />Data</a></li>
   <li><a class="reference" href="#last,seq[T]"
     title="last*[T](self: seq[T]): T"><wbr />last</a></li>
   <li><a class="reference" href="#first,seq[T]"
@@ -1454,7 +1464,7 @@ showTimeseries takes a Ts object as input as well as a header string for the dat
 </dd>
 <dt id="stock"><a name="stock,Df"></a><pre><span class="Keyword">proc</span> <span class="Identifier">stock</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">Df</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
 <dd>
-Various convenience procs to access the data and some calcs like returns etc stock,close,open,high,low,vol,adjc,date,rc,rca initDf,initPf,initNf 
+Various convenience procs to access the data and some calcs like returns etc stock,close,open,high,low,vol,adjc,date,rc,rca initDf,initPf,initNf,initCf,initTs,initPool 
 
 </dd>
 <dt id="close"><a name="close,Df"></a><pre><span class="Keyword">proc</span> <span class="Identifier">close</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">Df</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span></pre></dt>
@@ -1517,14 +1527,14 @@ init a new empty portfolio object
 init stock data object 
 
 </dd>
-<dt id="initTs"><a name="initTs,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">initTs</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Ts</span></pre></dt>
-<dd>
-init a timeseries object
-
-</dd>
 <dt id="initCf"><a name="initCf,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">initCf</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Cf</span></pre></dt>
 <dd>
 init a Cf object to hold basic forex data
+
+</dd>
+<dt id="initTs"><a name="initTs,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">initTs</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Ts</span></pre></dt>
+<dd>
+init a timeseries object
 
 </dd>
 <dt id="initPool"><a name="initPool,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">initPool</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Df</span><span class="Other">]</span></pre></dt>
@@ -1539,6 +1549,11 @@ init pools , which are sequences of Df objects used in portfolio building
 <p>and get linux get terminal width</p>
 <p>for windows this currently is set to terminalwidth 80 </p>
 
+
+</dd>
+<dt id="decho"><a name="decho,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">decho</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">z</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span> <span class="Other">{.</span><span class="Identifier">discardable</span><span class="Other">.}</span></pre></dt>
+<dd>
+blank lines 
 
 </dd>
 <dt id="showCurrentIndexes"><a name="showCurrentIndexes,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showCurrentIndexes</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">idxs</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span> <span class="Other">{.</span><span class="Identifier">discardable</span><span class="Other">.}</span></pre></dt>
@@ -1573,6 +1588,16 @@ init pools , which are sequences of Df objects used in portfolio building
 <dt id="year"><a name="year,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">year</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">aDate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
 <dd>
 Format yyyy
+
+</dd>
+<dt id="validdate"><a name="validdate,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">validdate</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">adate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="compareDates"><a name="compareDates,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">compareDates</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">startDate</span><span class="Other">,</span> <span class="Identifier">endDate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span></pre></dt>
+<dd>
+
 
 </dd>
 <dt id="intervalsecs"><a name="intervalsecs,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">intervalsecs</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">startDate</span><span class="Other">,</span> <span class="Identifier">endDate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">float</span></pre></dt>
@@ -1615,6 +1640,21 @@ interval procs returns time elapsed between two dates in secs,hours etc.
 <p>getSymbol2</p>
 <p>the work horse proc for getting yahoo data in csv format</p>
 <p>and then to parse into a Df object </p>
+
+
+</dd>
+<dt id="showhistData"><a name="showhistData,Df,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showhistData</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">adf</span><span class="Other">:</span> <span class="Identifier">Df</span><span class="Other">;</span> <span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span> <span class="Other">{.</span><span class="Identifier">discardable</span><span class="Other">.}</span></pre></dt>
+<dd>
+<p>showhistData</p>
+<p>Show n recent rows historical stock data</p>
+
+
+</dd>
+<dt id="showhistData"><a name="showhistData,Df,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showhistData</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">adf</span><span class="Other">:</span> <span class="Identifier">Df</span><span class="Other">;</span> <span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">e</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span> <span class="Other">{.</span><span class="Identifier">discardable</span><span class="Other">.}</span></pre></dt>
+<dd>
+<p>showhistData</p>
+<p>show historical stock data between 2 dates</p>
+<p>dates must be of format yyyy-MM-dd</p>
 
 
 </dd>
@@ -1783,7 +1823,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-06-19 10:15:39 UTC</small>
+        <small>Made with Nim. Generated: 2015-06-20 10:49:14 UTC</small>
       </div>
     </div>
   </div>
