--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@ ibm = <span class="pl-c1">getsymbol2</span>(<span class="pl-s">"IBM"</span>,<spa
 <h3>
 <a id="snippet-and-small-projects-collections" class="anchor" href="#snippet-and-small-projects-collections" aria-hidden="true"><span class="octicon octicon-link"></span></a>Snippet and small projects collections</h3>
 
-<p>Small utilities and programming efforts are collected in this repositories :
+<p>Small utilities and programming efforts are collected in this repositories :<br>
 <a href="https://github.com/qqtop/Nim-Snippets">Nim-Snippets</a> 
 Current items include:<br>
-       geodistance  calculate distance between two locations
+       geodistance  calculate distance between two locations<br>
        indo6        utility for quick translation in a linux terminal</p>
 
 <p><a href="https://github.com/qqtop/LanguageProjects">LanguageProjects</a>
-Mainly python 2.7.x based programs to facilitate lookup in dictionaries
+Mainly python 2.7.x based programs to facilitate lookup in dictionaries<br>
 mostly to facilitate studying efforts for Bahasa Indonesia and Japanese.</p>
 
 <p><a href="https://github.com/qqtop/Dabble">Dabble</a> 
