--- a/index.html
+++ b/index.html
@@ -85,18 +85,18 @@ ibm = <span class="pl-c1">getsymbol2</span>(<span class="pl-s">"IBM"</span>,<spa
 <h3>
 <a id="snippet-and-small-projects-collections" class="anchor" href="#snippet-and-small-projects-collections" aria-hidden="true"><span class="octicon octicon-link"></span></a>Snippet and small projects collections</h3>
 
-<p>Small utilities and programming efforts are collected in this repositories :<br>
-<a href="https://github.com/qqtop/Nim-Snippets">Nim-Snippets</a><br> 
+<p>Small utilities and programming efforts are collected in this repositories :<br><br>
+<a href="https://github.com/qqtop/Nim-Snippets">Nim-Snippets</a><br><br> 
 Current items include:<br>
        geodistance  calculate distance between two locations<br>
-       indo6        utility for quick translation in a linux terminal</p>
+       indo6        utility for quick translation in a linux terminal</p><br>
 
 <p><a href="https://github.com/qqtop/LanguageProjects">LanguageProjects</a><br>
 Mainly python 2.7.x based programs to facilitate lookup in dictionaries<br>
-mostly to facilitate studying efforts for Bahasa Indonesia and Japanese.</p>
+mostly to facilitate studying efforts for Bahasa Indonesia and Japanese.</p><br>
 
 <p><a href="https://github.com/qqtop/Dabble">Dabble</a> 
-Small programs for financial calculations in R and python 2.7.x</p>
+Small programs for financial calculations in R and python 2.7.x</p><br>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
