--- a/nimFinLib.html
+++ b/nimFinLib.html
@@ -1213,26 +1213,6 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="timeseries*[T](self: T; ty: string): Ts"><wbr />timeseries</a></li>
   <li><a class="reference" href="#showTimeseries,Ts,string,string,int"
     title="showTimeseries*(ats: Ts; header, ty: string; N: int)"><wbr />show<wbr />Timeseries</a></li>
-  <li><a class="reference" href="#stock,Df"
-    title="stock*(self: var Df): string"><wbr />stock</a></li>
-  <li><a class="reference" href="#close,Df"
-    title="close*(self: var Df): seq[float]"><wbr />close</a></li>
-  <li><a class="reference" href="#open,Df"
-    title="open*(self: var Df): seq[float]"><wbr />open</a></li>
-  <li><a class="reference" href="#high,Df"
-    title="high*(self: var Df): seq[float]"><wbr />high</a></li>
-  <li><a class="reference" href="#low,Df"
-    title="low*(self: var Df): seq[float]"><wbr />low</a></li>
-  <li><a class="reference" href="#vol,Df"
-    title="vol*(self: var Df): seq[float]"><wbr />vol</a></li>
-  <li><a class="reference" href="#adjc,Df"
-    title="adjc*(self: var Df): seq[float]"><wbr />adjc</a></li>
-  <li><a class="reference" href="#date,Df"
-    title="date*(self: var Df): seq[string]"><wbr />date</a></li>
-  <li><a class="reference" href="#rc,Df"
-    title="rc*(self: var Df): seq[RunningStat]"><wbr />rc</a></li>
-  <li><a class="reference" href="#rca,Df"
-    title="rca*(self: var Df): seq[RunningStat]"><wbr />rca</a></li>
   <li><a class="reference" href="#initPf,"
     title="initPf*(): PF"><wbr />init<wbr />Pf</a></li>
   <li><a class="reference" href="#initNf,"
@@ -1369,6 +1349,7 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
 <p>ProjectStart: 2015-06-05</p>
 <p>ToDo        : Ratios ,plotting, metals</p>
 <p>Programming : qqTop</p>
+<p>Contributors: reactorMonk</p>
 </p></blockquote>
 </p>
   <div class="section" id="6">
@@ -1469,84 +1450,45 @@ timeseries returns a Ts type date and one data column based on ty selection inpu
 showTimeseries takes a Ts object as input as well as a header string for the data column , a string which can be one of head,tail,all and N for number of rows to display usage : showTimeseries(myTimeseries,myHeader,&quot;head|tail|all&quot;,rows)
 
 </dd>
-<dt id="stock"><a name="stock,Df"></a><pre><span class="Keyword">proc</span> <span class="Identifier">stock</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">Df</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
-<dd>
-Various convenience procs to access the data and some calcs like returns etc stock,close,open,high,low,vol,adjc,date,rc,rca initDf,initPf,initNf,initCf,initTs,initPool 
-
-</dd>
-<dt id="close"><a name="close,Df"></a><pre><span class="Keyword">proc</span> <span class="Identifier">close</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">Df</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span></pre></dt>
-<dd>
-
-
-</dd>
-<dt id="open"><a name="open,Df"></a><pre><span class="Keyword">proc</span> <span class="Identifier">open</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">Df</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span></pre></dt>
-<dd>
-
-
-</dd>
-<dt id="high"><a name="high,Df"></a><pre><span class="Keyword">proc</span> <span class="Identifier">high</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">Df</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span></pre></dt>
-<dd>
-
-
-</dd>
-<dt id="low"><a name="low,Df"></a><pre><span class="Keyword">proc</span> <span class="Identifier">low</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">Df</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span></pre></dt>
-<dd>
-
-
-</dd>
-<dt id="vol"><a name="vol,Df"></a><pre><span class="Keyword">proc</span> <span class="Identifier">vol</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">Df</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span></pre></dt>
-<dd>
-
-
-</dd>
-<dt id="adjc"><a name="adjc,Df"></a><pre><span class="Keyword">proc</span> <span class="Identifier">adjc</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">Df</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span></pre></dt>
-<dd>
-
-
-</dd>
-<dt id="date"><a name="date,Df"></a><pre><span class="Keyword">proc</span> <span class="Identifier">date</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">Df</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span></pre></dt>
-<dd>
-
-
-</dd>
-<dt id="rc"><a name="rc,Df"></a><pre><span class="Keyword">proc</span> <span class="Identifier">rc</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">Df</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">RunningStat</span><span class="Other">]</span></pre></dt>
-<dd>
-
-
-</dd>
-<dt id="rca"><a name="rca,Df"></a><pre><span class="Keyword">proc</span> <span class="Identifier">rca</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">Df</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">RunningStat</span><span class="Other">]</span></pre></dt>
-<dd>
-
-
-</dd>
 <dt id="initPf"><a name="initPf,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">initPf</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">PF</span></pre></dt>
 <dd>
-init a new empty account object
+initPf<blockquote><p>init a new empty account object</p></blockquote>
+
 
 </dd>
 <dt id="initNf"><a name="initNf,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">initNf</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Nf</span></pre></dt>
 <dd>
-init a new empty portfolio object
+<p>initNf</p>
+<p>init a new empty portfolio object</p>
+
 
 </dd>
 <dt id="initDf"><a name="initDf,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">initDf</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Df</span></pre></dt>
 <dd>
-init stock data object 
+<p>initDf</p>
+<p>init stock data object </p>
+
 
 </dd>
 <dt id="initCf"><a name="initCf,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">initCf</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Cf</span></pre></dt>
 <dd>
-init a Cf object to hold basic forex data
+<p>initCf</p>
+<p>init a Cf object to hold basic forex data</p>
+
 
 </dd>
 <dt id="initTs"><a name="initTs,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">initTs</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Ts</span></pre></dt>
 <dd>
-init a timeseries object
+<p>initTs</p>
+<p>init a timeseries object</p>
+
 
 </dd>
 <dt id="initPool"><a name="initPool,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">initPool</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Df</span><span class="Other">]</span></pre></dt>
 <dd>
-init pools , which are sequences of Df objects used in portfolio building
+<p>initPool</p>
+<p>init pools , which are sequences of Df objects used in portfolio building</p>
+
 
 </dd>
 <dt id="getTerminalWidth"><a name="getTerminalWidth,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getTerminalWidth</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span></pre></dt>
@@ -1862,7 +1804,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-06-21 11:19:40 UTC</small>
+        <small>Made with Nim. Generated: 2015-06-21 11:45:44 UTC</small>
       </div>
     </div>
   </div>
