--- a/nimFinLib.html
+++ b/nimFinLib.html
@@ -1439,9 +1439,7 @@ Cf type is a simple object to hold current currency data
 <dl class="item">
 <dt id="timeseries"><a name="timeseries,T,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">timeseries</span><span class="Operator">*</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">;</span> <span class="Identifier">ty</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Ts</span></pre></dt>
 <dd>
-timeseries returns a Ts type date and one data column based on ty selection input usually is a Df object and a string , if a string is in ohlcva the relevant series will be extracted from the Df object<dl class="docutils"><dt>usage : timeseries(myDfObject,&quot;o&quot;) , this would return</dt>
-<dd>dates in dd and open prices in ts</dd>
-</dl>
+timeseries returns a Ts type date and one data column based on ty selection input usually is a Df object and a string , if a string is in ohlcva the relevant series will be extracted from the Df object usage exmple :<blockquote><p>```nimrod timeseries(myDfObject,&quot;o&quot;) ``` this would return dates in dd and open prices in ts</p></blockquote>
 
 
 </dd>
@@ -1804,7 +1802,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-06-21 12:37:32 UTC</small>
+        <small>Made with Nim. Generated: 2015-06-21 13:00:55 UTC</small>
       </div>
     </div>
   </div>
